--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_BestSellerPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_BestSellerPartial.cshtml
@@ -30,7 +30,7 @@
                                 <div class="caption col-sm-8 col-xs-8">
                                     <h4><a href="@Url.Action("ProductDetails","Products", new { productId= items.ProductId })">@items.Name</a></h4>
                                     <p class="price">
-                                        $@items.SellPrice
+                                        @Model.CurrencySign@items.SellPrice
                                     </p>
                                     <div class="rating">
                                         <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span>
