--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_CartItemsPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_CartItemsPartial.cshtml
@@ -11,7 +11,7 @@
                 </th>
                 <th>Quantity</th>
                 <th>Price</th>
-                <th >Tax</th>
+                <th>Tax</th>
                 <th>Total</th>
             </tr>
         </thead>
@@ -58,7 +58,7 @@
                     </td>
 
                     <td>
-                        <div class="price-whlist"><b style=" max-width: 20px"> @item.Price</b> </div>
+                        <div class="price-whlist"><b style=" max-width: 20px"> @item.CurrencySign @item.Price</b> </div>
                     </td>
 
                     <td>
