--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_SpecialProductPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_SpecialProductPartial.cshtml
@@ -41,7 +41,7 @@
                                                 </a>
                                             </h4>
                                             <p class="price">
-                                                $@Model.productMasterList[i].SellPrice
+                                                @Model.CurrencySign@Model.productMasterList[i].SellPrice
                                             </p>
                                             <div class="rating">
                                                 <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span>
@@ -79,7 +79,7 @@
                                         <div class="caption">
                                             <h4><a href="@Url.Action("ProductDetails","Products", new { productId= Model.productMasterList[i+1].ProductId })"> @Model.productMasterList[i + 1].Name</a></h4>
                                             <p class="price">
-                                                $@Model.productMasterList[i + 1].SellPrice
+                                                @Model.CurrencySign @Model.productMasterList[i + 1].SellPrice
                                             </p>
                                             <div class="rating">
                                                 <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span>
@@ -117,7 +117,7 @@
                                         <div class="caption">
                                             <h4><a href="@Url.Action("ProductDetails","Products", new { productId= Model.productMasterList[i+2].ProductId })">@Model.productMasterList[i + 2].Name</a></h4>
                                             <p class="price">
-                                                $@Model.productMasterList[i + 2].SellPrice
+                                                @Model.CurrencySign@Model.productMasterList[i + 2].SellPrice
                                             </p>
                                             <div class="rating">
                                                 <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span>
@@ -129,7 +129,7 @@
                                         </div>
                                         <div class="clearfix"></div>
                                         <div class="button-group">
-                                            <button type="button" class="acart" onclick="AddToCart(@Model.productMasterList[i].ProductId)">
+                                            <button type="button" class="acart" onclick="AddToCart(@Model.CurrencySign @Model.productMasterList[i].ProductId)">
                                                 <span>Add to Cart</span>
                                             </button>
                                         </div>
