--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_TopProductPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_TopProductPartial.cshtml
@@ -62,7 +62,7 @@
                                                 <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span>
                                                 <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span>
                                             </div>
-                                            <p class="price text-right">$@item.SellPrice</p>
+                                            <p class="price text-right">@Model.CurrencySign @item.SellPrice</p>
                                         </div>
                                         <div class="clearfix"></div>
                                         <div class="button-group">
