dynamic images are added in cart Imported from Changeset 2271

--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_CartItemsPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_CartItemsPartial.cshtml
@@ -23,7 +23,7 @@
 
             <tr>
 
-                <td><a href=""><img src="/UploadedFiles/Products/no-image.png" alt="@(item?.ProductMaster?.Name)"></a></td>
+                <td><a href=""><img src="@item.ProductPath" alt="@(item?.ProductMaster?.Name)"></a></td>
                 <td>
                     <div class="ordered-items">
                         <p>
