Bugs fixed with low stock report and Stock List grid view Imported from Changeset 2272

--- a/WMS/Views/InventoryStocks/Index.cshtml
+++ b/WMS/Views/InventoryStocks/Index.cshtml
@@ -32,7 +32,8 @@
     }
 
     function OnInventoryLocationBeginCallback(s, e) {
-        //e.customArgs["id"] = $('#selkey').val();
+        e.customArgs["id"] = $("#InventoryWarehouseId").val();
+        e.customArgs["productid"] = $('#selkey').val();
     }
 
     $(document).ready(function () {
