--- a/WMS/Views/Markets/_StockLevelsPartial.cshtml
+++ b/WMS/Views/Markets/_StockLevelsPartial.cshtml
@@ -13,7 +13,7 @@
         settings.KeyFieldName = "ProductID";
         settings.Width = Unit.Percentage(100);
         settings.CallbackRouteValues = new { Controller = "Markets", Action = "_StockLevelsPartial", id = ViewBag.MarketId };
-        settings.SettingsEditing.BatchUpdateRouteValues = new { Controller = "Markets", Action = "UpdateProductLevels"};
+        settings.SettingsEditing.BatchUpdateRouteValues = new { Controller = "Markets", Action = "UpdateProductLevels" };
 
         settings.SettingsEditing.Mode = GridViewEditingMode.Batch;
         settings.SettingsEditing.BatchEditSettings.EditMode = GridViewBatchEditMode.Cell;
@@ -36,6 +36,13 @@
         settings.Columns.Add(column =>
         {
             column.FieldName = "ProductName";
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+        });
+
+         settings.Columns.Add(column =>
+        {
+            column.Caption = "SKU";
+            column.FieldName = "SKUCode";
             column.EditFormSettings.Visible = DefaultBoolean.False;
         });
 
