--- a/WMS/Views/TenantLocations/_StockLevelsPartial.cshtml
+++ b/WMS/Views/TenantLocations/_StockLevelsPartial.cshtml
@@ -38,6 +38,13 @@
 
         settings.Columns.Add(column =>
         {
+            column.Caption = "SKU";
+            column.FieldName = "SKUCode";
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+        });
+
+        settings.Columns.Add(column =>
+        {
             column.FieldName = "ReOrderQuantity";
             column.EditFormSettings.Visible = DefaultBoolean.False;
         });
