--- a/WarehouseEcommerce/Areas/Shop/Views/User/Login.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/User/Login.cshtml
@@ -63,7 +63,7 @@
             <div class="row">
                 <div class="col-md-12 text-center">
                     <div class="login-logo">
-                        <a href="index.html">
+                        <a href="@Url.Action("Index","Home")">
                             <img src="~/Areas/Shop/Content/app/img/logo.png" title="SmartShop Multistore" alt="SmartShop Multistore" class="img-responsive ex-center">
                         </a>
                     </div>
