--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_CartItemsPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_CartItemsPartial.cshtml
@@ -81,10 +81,10 @@
 {
     if (Model.Count > 0)
     {
-        <div class="button-submit">
+        <div class="button-submit proceed-card-btn">
 
             <button type="Submit" name="submitNewsletter" class="btn btn-block" onclick="window.location.href='@Url.Action("GetAddress", "Orders")'">Proceed to Checkout</button>
-            <div class="pull-right"><label>Total: @(ViewBag.TotalQty == null ? 0 : ViewBag.TotalQty) </label></div>
+            <div class=""><label>Total: @(ViewBag.TotalQty == null ? 0 : ViewBag.TotalQty) </label></div>
         </div>
     }
     else
