--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_TopHeaderPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_TopHeaderPartial.cshtml
@@ -14,24 +14,24 @@
                     </div>
                 </div>
                 @*<div class="col-xs-6 iconxs"></div>*@
-                <div class=" h-search">
-                    <div id="search-by-category" class="search-by-category">
-                        <div class="search-container">
-                            <div class="categories-container">
-                                <div class="hover-cate">
-                                    @Html.DropDownList("ProductGroups", ViewBag.ProductGroups as SelectList, "All Categories", htmlAttributes: new { @class = "" })
-                                </div>
-                            </div>
-                            <div class="search-box input-group">
-                                <input type="text" name="search" id="text-search" value="" placeholder="Search" class="text-search" />
-                                <div id="sp-btn-search" class="input-group-btn">
-                                    <button type="button" id="btn-search-category" class="btn btn-search-category" onclick="SearchProductCategory();">Search</button>
-                                </div>
-                            </div>
+                @*<div class=" h-search">
+                    <div id="search-by-category" class="search-by-category">*@
+                <div class="search-container search-by-category">
+                    <div class="categories-container">
+                        <div class="hover-cate">
+                            @Html.DropDownList("ProductGroups", ViewBag.ProductGroups as SelectList, "All Categories", htmlAttributes: new { @class = "" })
+                        </div>
+                    </div>
+                    <div class="search-box input-group">
+                        <input type="text" name="search" id="text-search" value="" placeholder="Search" class="text-search" />
+                        <div id="sp-btn-search" class="input-group-btn">
+                            <button type="button" id="btn-search-category" class="btn btn-search-category" onclick="SearchProductCategory();">Search</button>
                         </div>
                     </div>
                 </div>
-                <div class=" contact-currency text-right">
+                @*</div>
+                    </div>*@
+                <div class=" contact-currency">
                     <div class="hcontact">
                         <a href="#">
                             <span class="hidden-xs">
@@ -54,11 +54,11 @@
                                         foreach (var item in ViewBag.Currencies)
                                         {
                                             <li>
-                                                <a href="javascript:;" class="currency-select btn btn-link btn-block" id ="@item.CurrencyID" type="button" onclick="onCurrencyChange(event)" >@item.Symbol @item.CurrencyName</a>
+                                                <a href="javascript:;" class="currency-select btn btn-link btn-block" id="@item.CurrencyID" type="button" onclick="onCurrencyChange(event)">@item.Symbol @item.CurrencyName</a>
                                             </li>
                                         }
                                     }
-                                 
+
                                     @*<li>
                                             <button class="currency-select btn btn-link btn-block" type="button" name="EUR">€ Euro</button>
                                         </li>
@@ -77,7 +77,7 @@
                 </div>
                 <div id="top-links" class=" menu-link account-cart">
                     <ul class="list-inline list-inline-flex">
-                        <li class="dropdown user_menu">
+                        <li id="user_menue" class="dropdown user_menu">
                             <a href="#" title="@(ViewBag.UserName == " " ? "My Account" : ViewBag.UserName)" class="dropdown-toggle" data-toggle="dropdown">
 
                                 <svg width="24px" height="24px">
@@ -85,9 +85,24 @@
                                 </svg>
                             </a>
                             <ul class="dropdown-menu dropdown-menu-right user_account">
-                                <li><a href="@Url.Action("Create","User")"><i class="fa fa-user-plus"></i>Register</a></li>
-                                <li><a href="@Url.Action("logout","User")"><i class="fa fa-lock"></i>@ViewBag.LoginDetail</a></li>
-                                <li><a href="#" id="wishlist-total"><i class="fa fa-heart"></i>Wish List (0)</a></li>
+                                @if (@ViewBag.LoginDetail == "Login")
+                                {
+                                    <li><a href="@Url.Action("Create","User")"><i class="fa fa-user-plus"></i>Register</a></li>
+                                }
+                                else
+                                {
+                                    <li><a href="@Url.Action("Index","Home")"><i class="fa fa-user" style="margin: 0 7px !important;"></i>@ViewBag.UserName</a></li>
+                                }
+
+                                @if (@ViewBag.LoginDetail == "Login")
+                                {
+                                    <li><a href="@Url.Action("login", "User")"><i class="fa fa-lock" style="margin: 0 9px !important;"></i>Login</a></li>
+                                }
+                                else
+                                {
+                                    <li><a href="@Url.Action("logout", "User")"><i class="fa fa-lock" style="margin: 0 9px !important;"></i>Logout</a></li>
+                                }
+                                @*<li><a href="#" id="wishlist-total"><i class="fa fa-heart"></i>Wish List (0)</a></li>*@
                             </ul>
                         </li>
                         <li id="cart" class="cart-menu">
@@ -147,3 +162,5 @@
     </header>
     @Html.Action("_HorizontalNavbarPartial", "Home")
 </div>
+
+
