--- a/WarehouseEcommerce/Areas/Shop/Views/User/Create.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/User/Create.cshtml
@@ -43,120 +43,6 @@
         </div>
     </div>
 
-
-
-
-   
-    @*
-
-    <div id="common-home" class="container login">
-        <div class="row bg-white">
-            @using (Html.BeginForm("Create", "User", FormMethod.Post, new { @class = "formNewLestter", id = "formNewLestter" }))
-            {
-                @Html.HiddenFor(model => model.PlaceOrder, (bool?)ViewBag.Placeorder)
-                <div class="col-md-5 col-sm-6 ex-left">
-                    <div class="webi-newsletter  webi-newsletter leftprobg text-center" id="newsletter_5b2631bae1cb9" data-mode="default">
-
-                        @Html.AntiForgeryToken()
-
-                        <div class="inner">
-                            <h3>USER DETAIL</h3>
-                            <hr>
-                            <div class="form-group">
-
-                                @Html.EditorFor(model => model.FirstName, new { htmlattributes = new { @class = "form-control input-md inputNew", @placeholder = "Enter First Name" } })
-                                @Html.ValidationMessageFor(model => model.FirstName)
-                                @Html.EditorFor(model => model.LastName, new { htmlattributes = new { @class = "form-control input-md inputNew", @placeholder = "Enter Last Name" } })
-                                @Html.ValidationMessageFor(model => model.LastName)
-
-                                @Html.EditorFor(model => model.ContactNumber, new { htmlattributes = new { @class = "form-control input-md inputNew", @placeholder = "Enter Contact Number" } })
-                                @Html.ValidationMessageFor(model => model.ContactNumber)
-                                @Html.EditorFor(model => model.Email, new { htmlattributes = new { @class = "form-control input-md inputNew", @placeholder = "Enter Email" } })
-                                @Html.ValidationMessageFor(model => model.Email)
-
-                                @Html.PasswordFor(model => model.Password, new { @class = "form-control input-md inputNew", @placeholder = "Enter Password" })
-                                @Html.ValidationMessageFor(model => model.Password)
-                                @Html.PasswordFor(model => model.ConfirmPassword, new { @class = "form-control input-md inputNew", @placeholder = " Re Enter Password" })
-                                @Html.ValidationMessageFor(model => model.Password)
-
-
-                            </div>
-
-                            @*<div class="seperator position-relative">
-                                    <span class="d-inline-block">OR</span>
-                                </div>
-                                <h3>Sign up with Social Media</h3>
-                                <hr>
-                                <div class="login-google">
-                                    <button class="btn btn-primary btn-fb">
-                                        <i class="fa fa-facebook"></i>CONNECT WITH FACEBOOK
-                                    </button>
-                                    <button class="btn btn-primary btn-goggle">
-                                        <i class="fa fa-google-plus" aria-hidden="true"></i>CONNECT WITH GOOGLE
-                                    </button>
-                                </div>*@
- 
-    @* second
-    
-    </div>
-
-
-                    </div>
-                </div>
-                <div class="col-md-5 col-sm-6 ex-right">
-                    <div class="webi-newsletter  webi-newsletter leftprobg text-center" id="newsletter_5b2631bae1cb9" data-mode="default">
-
-
-
-                        <div class="inner">
-                            <h3>COMPANY DETAIL</h3>
-                            <hr>
-                            <div class="form-group">
-
-                                @Html.EditorFor(model => model.CompanyName, new { htmlattributes = new { @class = "form-control input-md inputNew", @placeholder = "Enter Company" } })
-                                @Html.ValidationMessageFor(model => model.ContactNumber)
-                                @Html.EditorFor(model => model.VATNumber, new { htmlattributes = new { @class = "form-control input-md inputNew", @placeholder = "Enter Vat Number" } })
-                                @Html.ValidationMessageFor(model => model.ContactNumber)
-                                @Html.EditorFor(model => model.RegNumber, new { htmlattributes = new { @class = "form-control input-md inputNew", @placeholder = "Enter Company Reg No." } })
-                                @Html.ValidationMessageFor(model => model.ContactNumber)
-
-                            </div>
-
-                            <div class="forgot-password">
-                                <div class="text-left">
-                                    <p>
-                                        By creating and account you are agreeing to our <a class="forgot-password-link" href="forgot-password.html">
-                                            privacy policy
-                                        </a> and terms of use
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="button-submit">
-                                <button type="submit" name="submitNewsletter" class="btn btn-block btn-primary">Create an account</button>
-                            </div>
-                            @*<div class="seperator position-relative">
-                                    <span class="d-inline-block">OR</span>
-                                </div>
-                                <h3>Sign up with Social Media</h3>
-                                <hr>
-                                <div class="login-google">
-                                    <button class="btn btn-primary btn-fb">
-                                        <i class="fa fa-facebook"></i>CONNECT WITH FACEBOOK
-                                    </button>
-                                    <button class="btn btn-primary btn-goggle">
-                                        <i class="fa fa-google-plus" aria-hidden="true"></i>CONNECT WITH GOOGLE
-                                    </button>
-                                </div>*@
-    @*third                   
-    </div>
-
-                    </div>
-                </div>
-            }
-        </div>
-    </div>
-
-  *@
     <div class="row login-row">
 
         <div class="register-div">
@@ -177,7 +63,7 @@
             <div class="row">
                 <div class="col-md-12 text-center">
                     <div class="login-logo">
-                        <a href="index.html">
+                        <a href="@Url.Action("Index","Home")">
                             <img src="~/Areas/Shop/Content/app/img/logo.png" title="SmartShop Multistore" alt="SmartShop Multistore" class="img-responsive ex-center">
                         </a>
                     </div>
