--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_SliderPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_SliderPartial.cshtml
@@ -15,11 +15,16 @@
                 </div>
             </div>
             <div class="item">
-                <img src="/Areas/Shop/Content/app/img/slider/1.jpg" alt="MacBookAir" class="img-responsive" />
+                <img src="/Areas/Shop/Content/app/img/slider/2.jpg" alt="MacBookAir" class="img-responsive" />
                 <div class="carousel-caption">
                 </div>
             </div>
-            ...
+            <div class="item">
+                <img src="/Areas/Shop/Content/app/img/slider/3.jpg" alt="MacBookAir" class="img-responsive" />
+                <div class="carousel-caption">
+                </div>
+            </div>
+
         </div>
 
         <!-- Controls -->
