--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_TopHeaderPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_TopHeaderPartial.cshtml
@@ -96,11 +96,11 @@
 
                                 @if (@ViewBag.LoginDetail == "Login")
                                 {
-                                    <li><a href="@Url.Action("login", "User")"><i class="fa fa-lock" style="margin: 0 9px !important;"></i>Login</a></li>
+                                    <li><a href="@Url.Action("login", "User")"><i class="fa fa-sign-in" style="margin: 0 6.5px !important;"></i>Login</a></li>
                                 }
                                 else
                                 {
-                                    <li><a href="@Url.Action("logout", "User")"><i class="fa fa-lock" style="margin: 0 9px !important;"></i>Logout</a></li>
+                                    <li><a href="@Url.Action("logout", "User")"><i class="fa fa-sign-out"></i>Logout</a></li>
                                 }
                                 @*<li><a href="#" id="wishlist-total"><i class="fa fa-heart"></i>Wish List (0)</a></li>*@
                             </ul>
