--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_CartItemsPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_CartItemsPartial.cshtml
@@ -34,7 +34,7 @@
                         </p>
                         <ul>
                             <li>
-                                Sku: <span>@(item.ProductMaster?.SKUCode)</span>
+                                SKU: <span>@(item.ProductMaster?.SKUCode)</span>
                             </li>
                             <li>Size: <span>M</span></li>
                             @*<li>
