Image changes on slider and changes in nav bar Imported from Changeset 2282

--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_SliderPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_SliderPartial.cshtml
@@ -10,17 +10,17 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner" role="listbox">
             <div class="item active">
-                <img src="/Areas/Shop/Content/app/img/slider/1.jpg" alt="MacBookAir" class="img-responsive" />
+                <img src="~/Areas/Shop/Content/app/img/slider/1.png" alt="MacBookAir" class="img-responsive" />
                 <div class="carousel-caption">
                 </div>
             </div>
             <div class="item">
-                <img src="/Areas/Shop/Content/app/img/slider/2.jpg" alt="MacBookAir" class="img-responsive" />
+                <img src="~/Areas/Shop/Content/app/img/slider/1.jpg" alt="MacBookAir" class="img-responsive" />
                 <div class="carousel-caption">
                 </div>
             </div>
             <div class="item">
-                <img src="/Areas/Shop/Content/app/img/slider/3.jpg" alt="MacBookAir" class="img-responsive" />
+                <img src="~/Areas/Shop/Content/app/img/slider/4.jpg" alt="MacBookAir" class="img-responsive" />
                 <div class="carousel-caption">
                 </div>
             </div>
